--- a/gitops/backend-java/overlays/dev/kustomization.yaml
+++ b/gitops/backend-java/overlays/dev/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ../../base
 
 images:
-  - name: eduazureregistry.azurecr.io/backend-java
+  - name: eduazureregistry158.azurecr.io/backend-java
     newTag: main-20240725045346
 
 commonLabels:
