--- a/gitops/backend-java/base/deployment.yaml
+++ b/gitops/backend-java/base/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: backend-java
-        image: ${{ secret.AZURE_URL }}/backend-java:{{ newTag }}
+        image: ${{ secrets.AZURE_URL }}/backend-java:{{ newTag }}
         ports:
         - containerPort: 8080
