--- a/gitops/backend-java/base/deployment.yaml
+++ b/gitops/backend-java/base/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: backend-java
-        image: {{name}}/backend-java:{{newTag}}
+        image: eduazureregistry158.azurecr.io/backend-java:{{newTag}}
         ports:
         - containerPort: 8080
